# cpp_tasks_4sem

./: задания.docx
task_1/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  nohup.out  system.h
task_2/: CMakeLists.txt  main.cpp  type_list.h
task_3/: CMakeLists.txt  main.cpp  type_map.h
task_4/: CMakeLists.txt  main.cpp
task_5/: CMakeLists.txt  main.cpp
task_6/: CMakeLists.txt  checkpoint.cpp  checkpoint.h  checkpointbuilders.cpp  checkpointbuilders.h  checkpointmanager.cpp  checkpointmanager.h  main.cpp  trackbuilder.cpp  trackbuilder.h
task_7/: CMakeLists.txt  abstraction.cpp  abstraction.h  implementation.cpp  implementation.h  main.cpp
task_8/: CMakeLists.txt  expression_factory.h  main.cpp  operators.h
